almost finished part 2

--- a/WebClient/WebRole1/WebRole1.csproj
+++ b/WebClient/WebRole1/WebRole1.csproj
@@ -93,6 +93,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Api.html" />
     <Content Include="packages.config" />
     <Content Include="css\bootstrap-theme.css.map" />
     <Content Include="css\bootstrap-theme.min.css.map" />
@@ -121,6 +122,7 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
     <Content Include="MovieList.aspx" />
+    <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Web.config" />
     <None Include="Service References\LoginReference\LoginWebService.wsdl" />
     <Content Include="Service References\LoginReference\WebRole1.LoginReference.HelloWorldResponse.datasource">
