--- a/WebClient/WebRole1/WebRole1.csproj
+++ b/WebClient/WebRole1/WebRole1.csproj
@@ -93,8 +93,12 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Api.html" />
     <Content Include="ApiAssignment.aspx" />
+    <Content Include="css\reset.css" />
+    <Content Include="css\Scripts\bootstrap-theme.css" />
+    <Content Include="css\Scripts\bootstrap.css" />
+    <Content Include="css\Scripts\bootstrap.min.css" />
+    <Content Include="css\style.css" />
     <Content Include="packages.config" />
     <Content Include="css\bootstrap-theme.css.map" />
     <Content Include="css\bootstrap-theme.min.css.map" />
